--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <ul class="comments" id="list">
         <!-- Список рендерится из JS -->
       </ul>
+      <img class="preloader" src="https://pear-advert.ru/images/uploads/blog/273/progress.gif" alt="preloader">
       <div class="add-form">
         <input
           type="text"
@@ -28,7 +29,7 @@
           <button class="add-form-button inactive" id="add-button">Написать</button>
         </div>
       </div>
-      <button class="del-last-comment active">Удалить последний комментарий</button>
+      <!-- <button class="del-last-comment active">Удалить последний комментарий</button> -->
     </div>
   </body>
 
