--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       <ul class="comments" id="list">
         <!-- Список рендерится из JS -->
       </ul>
-      <img class="preloader" src="https://pear-advert.ru/images/uploads/blog/273/progress.gif" alt="preloader">
+      <div class="preloader">
+        <p>Подождите, идет загрузка </p>
+        <img class="preloder" src="https://pear-advert.ru/images/uploads/blog/273/new-loading.gif" alt="preloader">
+      </div>
       <div class="add-form">
         <input
           type="text"
