--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </ul>
       <div class="preloader">
         <p>Подождите, идет загрузка </p>
-        <img class="preloder" src="https://pear-advert.ru/images/uploads/blog/273/new-loading.gif" alt="preloader">
+        <img class="preload" src="https://pear-advert.ru/images/uploads/blog/273/new-loading.gif" alt="preloader">
       </div>
       <div class="add-form">
         <input
@@ -36,6 +36,6 @@
     </div>
   </body>
 
-  <script src="./script.js"></script>
-  
+  <script type="module" src="./scripts/script.js"></script>
+
 </html>
