--- a/index.html
+++ b/index.html
@@ -6,34 +6,7 @@
   </head>
 
   <body>
-    <div class="container">
-      <ul class="comments" id="list">
-        <!-- Список рендерится из JS -->
-      </ul>
-      <div class="preloader">
-        <p>Подождите, идет загрузка </p>
-        <img class="preload" src="https://pear-advert.ru/images/uploads/blog/273/new-loading.gif" alt="preloader">
-      </div>
-      <div class="add-form">
-        <input
-          type="text"
-          id="name-input"
-          class="add-form-name"
-          placeholder="Введите ваше имя"
-        />
-        <textarea
-          type="textarea"
-          id="comments-input"
-          class="add-form-text"
-          placeholder="Введите ваш коментарий"
-          rows="4"
-        ></textarea>
-        <div class="add-form-row">
-          <button class="add-form-button inactive" id="add-button">Написать</button>
-        </div>
-      </div>
-      <!-- <button class="del-last-comment active">Удалить последний комментарий</button> -->
-    </div>
+    <div class="container"></div>
   </body>
 
   <script type="module" src="./scripts/script.js"></script>
