--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Проект "Комменты"</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -9,6 +10,5 @@
     <div class="container"></div>
   </body>
 
-  <script type="module" src="./scripts/script.js"></script>
-
+  <script src="./dist/main.js"></script>
 </html>
